<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:focusable="true"
    tools:context=".RequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/gradient_round_corner"
        android:backgroundTint="@color/colorBackgroundLight"
        android:elevation="36dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_issue"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/f_request_img_problem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_camera"
            android:backgroundTint="@color/colorAccent"
            android:scaleType="matrix"
            android:src="@drawable/ic_add" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tap_above_to_click_photo"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/f_request_txt_depth_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/depth_in_meters"
            android:inputType="text|number"
            android:maxLength="10" />

        <EditText
            android:id="@+id/f_request_txt_width_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/width_in_meters"
            android:inputType="text|number"
            android:maxLength="10" />

        <EditText
            android:id="@+id/f_request_txt_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/details"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLength="50" />


        <Button
            android:id="@+id/f_request_btn_location"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/gradient_round_corner"
            android:backgroundTint="@color/colorAccent"
            android:drawableStart="@drawable/ic_my_location"
            android:elevation="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/location"
            android:textColor="@color/colorBackgroundLight" />

        <Button
            android:id="@+id/f_request_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient_round_corner"
            android:backgroundTint="@color/colorPrimaryDarkDark"
            android:drawableStart="@drawable/ic_send"
            android:elevation="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/submit"
            android:textColor="@color/colorBackgroundLight" />
    </LinearLayout>
</ScrollView>