<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:focusable="true"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/gradient_round_corner"
        android:backgroundTint="@color/colorBackgroundLight"
        android:elevation="36dp"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_person"
            android:backgroundTint="@color/colorAccent" />

        <EditText
            android:id="@+id/f_profile_txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:maxLength="50" />

        <EditText
            android:id="@+id/f_profile_txt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/f_profile_txt_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="text"
            android:hint="~ DEBUG IP ~"
            android:maxLength="50" />

        <Button
            android:id="@+id/f_profile_btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/gradient_round_corner"
            android:backgroundTint="@color/colorPrimaryDarkDark"
            android:drawableStart="@drawable/ic_save"
            android:elevation="16dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/login"
            android:textColor="@color/colorBackgroundLight" />
    </LinearLayout>
</ScrollView>